--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -13,6 +13,22 @@
     text-align: center;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+p {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 500;
+    line-height: 1.6;
+    font-size: 18px;
+}
+
 h1 {
     font-size: 60px;
     line-height: 1.4;
@@ -38,6 +54,33 @@ h2 {
     margin: auto;
 }
 
+.tb__space {
+    padding: 60px 0px;
+}
+
+.maintitle h1 {
+    width: fit-content;
+    margin: 0px auto 30px;
+    animation: titlemove 3s ease-in-out infinite;
+}
+
+.default__btn input {
+    background: var(--blue);
+    color: var(--white);
+    padding: 20px 70px;
+    font-size: 22px;
+    font-family: 'Josefin Sans';
+    border: 0px;
+    border-radius: 30px;
+    text-transform: uppercase;
+    cursor: pointer;
+    box-shadow: 0px 0px 11px #000;
+}
+
+.default__btn input:hover {
+    box-shadow: 4px 3px 10px #000 inset;
+}
+
 .logo {
     display: inline-flex;
 }
@@ -60,6 +103,10 @@ h2 {
     width: 125px;
 }
 
+.logo a {
+    display: flex;
+}
+
 .menu ul {
     display: flex;
     list-style: none;
@@ -77,7 +124,7 @@ h2 {
     text-decoration: none;
     font-size: 28px;
     text-transform: uppercase;
-    font-family: fantasy;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 700;
     position: relative;
     display: block;
@@ -127,47 +174,90 @@ h2 {
     border-color: var(--blue);
 }
 
-.page__wrap {
-    position: relative;
-}
-
-#homeSection {
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: -1;
+.hero__inner {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    animation: backscroll 30s ease-in-out infinite;
 }
 
-.bannercontent {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    flex-direction: column;
+.hero__right {
+    width: 50%;
 }
 
-.bannercontent h1,
-.bannercontent h2 {
-    margin: 10px;
+.hero__right img {
+    width: 500px;
+}
+
+.hero__left {
+    width: 50%;
+    text-align: left;
+}
+
+span.bgblue {
+    background: var(--blue);
+    padding: 10px 10px;
+}
+
+span.bgpink {
+    background: var(--blue);
+    display: inline-block;
     color: var(--white);
-    z-index: 9;
 }
 
-#homeSection:before {
-    content: "";
-    background: rgb(0 0 0 / 68%);
+.typed-cursor {
+    color: var(--blue);
+}
+
+.about__inner {
+    width: 70%;
+    margin: 0 auto 60px;
+}
+
+.contactform {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: auto;
+}
+
+.contactform .full {
     width: 100%;
-    height: 100%;
-    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0px 30px;
+}
+
+.contactform .half {
+    width: 48%;
+    display: inline-flex;
+}
+
+.contactform .full textarea {
+    width: 100%;
+    min-height: 200px;
+}
+
+.contactform .full input {
+    height: 26px;
+    width: 100%;
+}
+
+.contactform .full input,
+.contactform .full textarea {
+    border-radius: 30px;
+    box-shadow: 6px 4px 7px var(--blue) inset;
+    text-align: center;
+    font-family: 'Josefin Sans';
+    font-size: 26px;
+    border: 2px solid var(--pink);
+    padding: 16px 6px;
+    color: var(--blue);
+    outline: 0;
+}
+
+.contactform .full input::placeholder,
+.contactform .full textarea::placeholder {
+    color: var(--blue);
 }
 
 .copyright {
@@ -190,5 +280,17 @@ h2 {
     }
     100% {
         background-size: 100%;
+    }
+}
+
+@keyframes titlemove {
+    0% {
+        transform: translate(0%, 0);
+    }
+    50% {
+        text-shadow: 0 25px 50px rgba(0, 0, 0, 0.75);
+    }
+    100% {
+        transform: translate(0%, 0);
     }
 }
